--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,22 @@
 @import "normalize.less";
+@import "variables.less";
+@import "mixins.less";
+@import "global.less";
+
+@import "block/main-header.less";
+@import "block/main-navigation.less";
+@import "block/intro.less";
+@import "block/course.less";
+@import "block/advantages.less";
+@import "block/main-footer.less";
+@import "block/footer-logo.less";
+@import "block/social.less";
+@import "block/copyright.less";
+@import "block/catalog.less";
+@import "block/product.less";
+@import "block/show-more.less";
+@import "block/additional-goods.less";
+@import "block/additional-good.less";
+@import "block/stock.less";
+@import "block/partnership.less";
+@import "block/map.less";
