--- a/source/less/block/order.less
+++ b/source/less/block/order.less
@@ -155,7 +155,7 @@ input[type="checkbox"]:checked+.order__label--additionally {
     width: 20px;
     height: 10px;
     left: 5px;
-    top: 0px;
+    top: 0;
     border-left: 2px solid @main-color;
     border-bottom: 2px solid @main-color;
     transform: rotate(-45deg);
